# hermes-plugin-python

./: .gitignore  README.md  hermes.toml  increment_version.py  pyproject.toml  test_harvest.py
.github/workflows/: pylint.yml  python-app.yml  python-publish.yml  zenodo-sandbox.yml
src/hermes_git/: harvest.py
src/hermes_git/util/: git_node_register.py
src/hermes_toml/: harvest.py
src/hermes_toml/util/: git_contributor_data.py
test/hermes_toml_test/: __init__.py  test_harvest.py
